# edx_opencv

./: .gitignore
Acceso_a_los_pixeles_de_una_imagen/: AccesPixelImg.cpp  CMakeLists.txt
Aplicacion_de_LUTs/: ApplyLUT.cpp  CMakeLists.txt
Camshift_OpenCV/: CMakeLists.txt  Camshift.cpp
Clasificador_Bayes_OpenCV/: Bayes.cpp  CMakeLists.txt
Correlacion_de_imagenes_digitales_con_las_OpenCV/: CMakeLists.txt  ImageCorrec.cpp
Deteccion_de_bordes_basado_en_el_gradiente_con_las_OpenCV/: BorderDetection.cpp  CMakeLists.txt
Deteccion_de_movimiento_con_camara_estatica_usando_las_OpenCV/: CMakeLists.txt  DectectMovement.cpp
Deteccion_de_movimiento_con_optical_flow_usando_las_OpenCV/: CMakeLists.txt  DectectMovementOpticalFlow.cpp
Ejemplo_de_Conv_de_imagenes_digitales_con_las_OpenCV/: CMakeLists.txt  ImageConv.cpp
Ejemplo_de_Correlacion_de_imagenes_digitales_con_las_OpenCV/: CMakeLists.txt  ImageCorrec.cpp
Ejemplo_de_Transformaciones_geometricas_con_las_OpenCV/: CMakeLists.txt  GeomtricTrans.cpp
El_detector_de_Canny_usando_las_OpenCV/: CMakeLists.txt  CannyDetection.cpp
Escritura_primer_programa/: CMakeLists.txt  FirstProgram.cpp
Espacios_de_color_con_las_OpenCV/: CMakeLists.txt  ColorSpace.cpp
Etiquetado_de_objetos_usando_las_OpenCV/: CMakeLists.txt  Label.cpp
Examen_Final/: CMakeLists.txt  FinalEx.cpp
Examen_semana4/: CMakeLists.txt  Examen1.cpp
Obtencion_del_histograma/: CMakeLists.txt  GetHisto.cpp
Operaciones_logicas_con_las_OpenCV/: CMakeLists.txt  LogicalOperation.cpp
Operaciones_matematicas_con_las_OpenCV/: CMakeLists.txt  MatematicalOperation.cpp
Realce_de_bordes_con_las_OpenCV/: Border.cpp  CMakeLists.txt
Reduccion_de_ruido_con_las_OpenCV/: CMakeLists.txt  NoiseReduce.cpp
Transformaciones_morfologicas_usando_las_OpenCV/: CMakeLists.txt  Morfologica.cpp
Transformada_de_Hough_usando_las_OpenCV/: CMakeLists.txt  Hough.cpp
Umbralizacion_usando_las_OpenCV/: CMakeLists.txt  Umbral.cpp
Variacion_del_contraste_en_las_imagenes,_ecualizacion_con_las_OpenCV/: CMakeLists.txt  Contrast.cpp
kmedias_usando_las_OpenCV/: CMakeLists.txt  Kmedias.cpp
