cmake_minimum_required(VERSION 2.8)
project( CannyDetection )
find_package( OpenCV REQUIRED )
add_executable( CannyDetection CannyDetection.cpp)
function (ListToString result delim)
    list(GET ARGV 2 temp)
    math(EXPR N "${ARGC}-1")
    foreach(IDX RANGE 3 ${N})
        list(GET ARGV ${IDX} STR)
        set(temp "${temp}${delim}${STR}")
    endforeach()
    set(${result} "${temp}" PARENT_SCOPE)
endfunction(ListToString)
ListToString(str ", " ${OpenCV_LIBS})
message(STATUS "${OpenCV_LIBS}")
file(GLOB IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/*.jpg")
file(COPY ${IMAGE}
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries( CannyDetection ${OpenCV_LIBS} )