cmake_minimum_required(VERSION 2.8)
project( FirstProgram )
find_package( OpenCV REQUIRED )
add_executable( FirstProgram FirstProgram.cpp)
function (ListToString result delim)
    list(GET ARGV 2 temp)
    math(EXPR N "${ARGC}-1")
    foreach(IDX RANGE 3 ${N})
        list(GET ARGV ${IDX} STR)
        set(temp "${temp}${delim}${STR}")
    endforeach()
    set(${result} "${temp}" PARENT_SCOPE)
endfunction(ListToString)
ListToString(str ", " ${OpenCV_LIBS})
message(STATUS "${OpenCV_LIBS}")
target_link_libraries( FirstProgram ${OpenCV_LIBS} )